# lol.blocks.engine

./: .gitignore  README.md
cmake/: CMakeLists.txt
docs/: header.txt
projects/core/: core.md
projects/core/api/: c_funcs.cpp  c_funcs.hpp
projects/core/core-api/: core_funcs.cpp  core_funcs.hpp
projects/core/depend/api/: win.cpp  win.hpp
projects/core/depend/include/: d_inc.cpp  d_inc.hpp
projects/core/depend/macro/: names.hpp  types.hpp
projects/core/depend/stl/: stl_includes.cpp
projects/core/entry/: main.cpp
projects/core/error/: codes.hpp  desc.hpp  eu.cpp  eu.hpp  object.cpp  object.hpp
projects/core/include/: all_core.cpp  all_core.hpp
projects/core/window/: c_window.cpp  c_window.hpp
projects/engine/: engine.md
projects/engine/classes/: dummy.hpp
projects/engine/classes/dx11/: dx11_camera.cpp  dx11_camera.hpp  dx11_time.cpp  dx11_time.hpp  sdx11.cpp  sdx11.hpp
projects/engine/demos/dx11/: dx11_d.cpp  dx11_d.hpp  shapes.cpp  shapes.hpp
projects/engine/demos/dx11/assets/textures/: c4d13e1ef5c20e49d7206aefff123f19--no-signa.dds  srtm.dds  srtm_bgis.dds
projects/engine/demos/dx11/assets/textures/datson_car/: headlight_normal.dds  plate.dds  stickers.dds
projects/engine/demos/dx11/resources/shaders/: cbd_dx11_cp.hlsl  cbd_dx11_ps.hlsl  cbd_dx11_vs.hlsl  cd_dx11_ps.hlsl  cd_dx11_vs.hlsl  td_dx11_ps.hlsl  td_dx11_vs.hlsl  txd_dx11_ps.hlsl  txd_dx11_vs.hlsl
projects/engine/depend/api/: win.cpp  win.hpp
projects/engine/depend/gfx/: dx_api_inc.hpp
projects/engine/depend/include/: d_inc.cpp  d_inc.hpp
projects/engine/depend/macro/: names.hpp  types.hpp
projects/engine/depend/stl/: stl.hpp  stl_includes.cpp  stl_includes.hpp
projects/engine/engine-api/: engine_api.cpp  engine_api.hpp
projects/engine/error/: co.cpp  co.hpp  codes.hpp  desc.hpp
projects/engine/error/dx11/: e_dx11_u.cpp  e_dx11_u.hpp
projects/engine/include/: all_engine.cpp  all_engine.hpp
projects/engine/physics/: base.cpp  base.hpp
projects/gui/: gui.md
projects/gui/classes/: dummy.hpp
projects/gui/depend/api/: win.cpp  win.hpp
projects/gui/depend/macro/: names.hpp  types.hpp
projects/gui/depend/stl/: stl.hpp  stl_includes.cpp  stl_includes.hpp
projects/gui/include/: all_gui.cpp  all_gui.hpp
projects/logger/: logs.md
projects/logger/classes/: base.cpp  base.hpp  file.cpp  file.hpp  log_page.cpp  log_page.hpp  m_q_sys.cpp  m_q_sys.hpp  scroll.cpp  scroll.hpp  wl.cpp  wl.hpp
projects/logger/depend/api/: win.cpp  win.hpp
projects/logger/depend/include/: d_inc.cpp  d_inc.hpp
projects/logger/depend/macro/: names.hpp  types.hpp
projects/logger/depend/stl/: stl.hpp  stl_includes.cpp  stl_includes.hpp
projects/logger/error/: co.cpp  co.hpp  codes.hpp  desc.hpp
projects/logger/include/: all_logs.cpp  all_logs.hpp
projects/logger/init/: system_init.cpp  system_init.hpp
projects/logger/log-api/: log_api.cpp  log_api.hpp
projects/unit-tests/classes/: random.cpp  random.hpp
projects/unit-tests/depend/macro/: names.hpp  types.hpp
projects/unit-tests/depend/stl/: stl.hpp  stl_includes.cpp  stl_includes.hpp
projects/unit-tests/include/: all_tests.cpp  all_tests.hpp
projects/unit-tests/test-api/: test_api.cpp  test_api.hpp
